[package]
name = "rust_noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnoise = "1.1.1"
simdnoise = "3.1.6"
fastnoise-lite = { version = "1.1.1", features = ["f64"] }
argminmax = { version = "0.6.1", default-features = false, features = ["float"] }